Bug 141195 - Custom button text color not shown in the Basic dialogs with default background color
Summary: Custom button text color not shown in the Basic dialogs with default backgrou...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: BASIC-Dialog-Designer
  Show dependency treegraph
 
Reported: 2021-03-23 10:52 UTC by Matej Kivader
Modified: 2021-04-10 17:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Proposed patch fot the bug (1.18 KB, patch)
2021-03-23 11:09 UTC, Matej Kivader
Details
Test file to see buttons behavior (10.25 KB, application/octet-stream)
2021-04-08 19:04 UTC, Matej Kivader
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Kivader 2021-03-23 10:52:29 UTC
Description:
Macros -> DialogEditor

When you create a dialog, place a button to it and change button text color, color of the text is successfully changed in dialog view.
However when you click Preview (or you run your Basic module with this dialog), text color is black instead of chosen color.

Workaround is to change also button background color from Default one.

This happen on multiple computers with different configurations (only Windows OS tested).

Steps to Reproduce:
1.Open Basic Editor
2.Create new dialog
3.Place a button onto it
4.Change button text color
5.Show preview ... BAM ... color not changed
6.Change button background color from default one
7.Show preview ... now working.

Actual Results:
Button color not changed with the default background.

Expected Results:
Button color should be changed with the default background.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a873ef61534353df3251dd879f8deabde9295145
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: sk-SK (sk_SK); UI: en-US
Calc: CL
Comment 1 Matej Kivader 2021-03-23 11:09:22 UTC
Created attachment 170654 [details]
Proposed patch fot the bug
Comment 2 Xisco Faulí 2021-03-23 11:27:02 UTC
Hello Matej,
Thanks for reporting this issue.
Please, read https://wiki.documentfoundation.org/Development/gerrit/SubmitPatch on how to submit patches to gerrit, the platform used to review them
Comment 3 Matej Kivader 2021-03-23 13:28:51 UTC
(In reply to Xisco Faulí from comment #2)
> Hello Matej,
> Thanks for reporting this issue.
> Please, read
> https://wiki.documentfoundation.org/Development/gerrit/SubmitPatch on how to
> submit patches to gerrit, the platform used to review them

Hello Xisco,
Pushed to gerrit
https://gerrit.libreoffice.org/c/core/+/112989
Comment 4 Buovjaga 2021-04-05 15:15:01 UTC
(In reply to Matej Kivader from comment #3)
> Hello Xisco,
> Pushed to gerrit
> https://gerrit.libreoffice.org/c/core/+/112989

I confirm this fixes it for me. Note for testers: the button to press is "Preview Dialog".

Btw. in the commit message of your patch you have an unnecessary line with "w"

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 18cc01b63996f81b284e3bc827d1be7f3da8983a
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 5 Matej Kivader 2021-04-05 16:56:57 UTC
(In reply to Buovjaga from comment #4)
> (In reply to Matej Kivader from comment #3)
> > Hello Xisco,
> > Pushed to gerrit
> > https://gerrit.libreoffice.org/c/core/+/112989
> 
> I confirm this fixes it for me. Note for testers: the button to press is
> "Preview Dialog".
> 
> Btw. in the commit message of your patch you have an unnecessary line with
> "w"
> 
> Version: 7.2.0.0.alpha0+ / LibreOffice Community
> Build ID: 18cc01b63996f81b284e3bc827d1be7f3da8983a
> CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
> Locale: fi-FI (fi_FI.UTF-8); UI: en-US
> Calc: threaded

Sorry for that(In reply to Buovjaga from comment #4)
> (In reply to Matej Kivader from comment #3)
> > Hello Xisco,
> > Pushed to gerrit
> > https://gerrit.libreoffice.org/c/core/+/112989
> 
> I confirm this fixes it for me. Note for testers: the button to press is
> "Preview Dialog".
> 
> Btw. in the commit message of your patch you have an unnecessary line with
> "w"
> 
> Version: 7.2.0.0.alpha0+ / LibreOffice Community
> Build ID: 18cc01b63996f81b284e3bc827d1be7f3da8983a
> CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
> Locale: fi-FI (fi_FI.UTF-8); UI: en-US
> Calc: threaded

Hi, sorry for that "w" ... VIM goes crazy on fresh cygwin installation. Amended.
Comment 6 Matej Kivader 2021-04-08 19:03:33 UTC
I added a new version of the patch.
For me it looks like commit bellow from Thorsten could be simplified with no visible adverse effects.
During debugging I hit (and fix) another UX bug. If Background color is chosen, highlight of the button do nothing. So I fixed also this.
In attachment is a test file (Macro->Edit Macros - module Standard->Dialog1.
Comment 7 Matej Kivader 2021-04-08 19:04:41 UTC
Created attachment 171039 [details]
Test file to see buttons behavior
Comment 8 Matej Kivader 2021-04-08 20:08:54 UTC
(In reply to Matej Kivader from comment #6)
> I added a new version of the patch.
> For me it looks like commit bellow from Thorsten could be simplified with no
> visible adverse effects.
> During debugging I hit (and fix) another UX bug. If Background color is
> chosen, highlight of the button do nothing. So I fixed also this.
> In attachment is a test file (Macro->Edit Macros - module Standard->Dialog1.

Commit from Thorsten:
https://git.libreoffice.org/core/commit/84b2849512bdb19597739d9515dd55e2d3ba9504
Comment 9 Commit Notification 2021-04-10 13:21:51 UTC
bykivi committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/68b225bfbf51391b517dd483181e40e4a4c3fe31

tdf#141195:fix button text color with default background color

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.