tdf#141195:fix button text color with default background color

Change-Id: I2f30282e5e1f5e303be2802529f693be4968620d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112989
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>